test/scc/expr/semantic-errors/152.t
void test()
{
    int a[] = "abc";
}